<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size10dp">
    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/textsize16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip06_title_1"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tip06_01"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize16sp"
        android:textColor="@color/red"
        android:text="@string/tip06_title_2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_noidung_02"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize16sp"
        android:textColor="@color/red"
        android:text="@string/tip06_title_3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_title_4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_noidung_04"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tip06_04"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_title_5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_noidung_05"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tip06_05"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_title_6"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_noidung_06"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tip06_06"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_title_7"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size5dp"
        android:text="@string/tip06_noidung_07"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tip06_07"
        android:scaleType="fitXY"/>
</LinearLayout>