<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size10dp">
    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/textsize16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip02_title_1"/>
    <TextView
        android:layout_marginLeft="@dimen/size5dp"
        android:layout_marginTop="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip02_noidung_01"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tips02_img_1"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_marginLeft="@dimen/size5dp"
        android:layout_marginTop="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip02_noidung_02"/>
    <TextView
        android:textSize="@dimen/textsize16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip02_title_2"/>
    <TextView
        android:layout_marginLeft="@dimen/size5dp"
        android:layout_marginTop="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip02_noidung_03"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tips02_img_2"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_marginLeft="@dimen/size5dp"
        android:layout_marginTop="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip02_noidung_04"/>
    <TextView
        android:layout_marginLeft="@dimen/size5dp"
        android:layout_marginTop="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip02_noidung_05"/>
    <ImageView
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp"
        android:src="@drawable/tips02_img_3"
        android:scaleType="fitXY"/>
</LinearLayout>