<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize16sp"
        android:text="@string/tip01_title"
        android:textStyle="bold"/>
    <TextView
        android:textSize="@dimen/textsize16sp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tip01_muoi"/>
    <LinearLayout
        android:layout_marginTop="@dimen/size5dp"
        android:padding="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip01_muoi_detail"/>
        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/muoi_img"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="@dimen/size150dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:textSize="@dimen/textsize16sp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tip01_duong"/>
    <LinearLayout
        android:layout_marginTop="@dimen/size5dp"
        android:padding="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/duong_img"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="@dimen/size150dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip01_duong_detail"/>
    </LinearLayout>
    <TextView
        android:textSize="@dimen/textsize16sp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tip01_nuocmam"/>
    <LinearLayout
        android:layout_marginTop="@dimen/size5dp"
        android:padding="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip01_nuocmam_detail"/>
        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/nuocmam"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="@dimen/size150dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:textSize="@dimen/textsize16sp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tip01_hatnem"/>
    <LinearLayout
        android:layout_marginTop="@dimen/size5dp"
        android:padding="@dimen/size5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/hat_nem"
            android:scaleType="fitXY"
            android:layout_width="0dp"
            android:layout_height="@dimen/size150dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tip01_hatnem_detail"/>
    </LinearLayout>
</LinearLayout>